# CodeMate

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  clean_injest.py  config.py  data_handler.py  debug_env.py  docker-compose.yaml  entrypoint.sh  fix_collection.py  fresh_start.py  injest.py  main.py  prompts.py  pyproject.toml  requirements.txt  research_report.md  test.py
