[project]
name = "codemate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.0.5",
    "fastembed>=0.7.3",
    "gradio>=5.46.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-milvus>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "markdown>=3.9",
    "pymilvus>=2.6.2",
    "pypdf>=6.0.0",
    "weasyprint>=66.0",
]
